--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,33 @@
     <!-- Base application theme. -->
     <style name="Theme.PyTournaments" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/light_purple</item>
+        <item name="colorPrimaryVariant">@color/dark_purple_2</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/white_purple</item>
+        <item name="colorSecondaryVariant">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorSurface">@color/black_2</item>
+        <item name="colorOnSurface">@color/white</item>
+
+        <item name="colorError">@color/dark_red</item>
+        <item name="colorOnError">@color/white_2</item>
+
+        <item name="backgroundColor">@color/dark_purple</item>
+        <item name="colorOnBackground">@color/light_purple</item>
+
+        <item name="primaryButtonStyle">
+            @style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton
+        </item>
+        <item name="secondaryButtonStyle">
+            @style/Widget.MaterialComponents.Button.OutlinedButton.SecondaryButton
+        </item>
+
+        <item name="titleStyle">@style/Base.TextAppearance.AppCompat.BasicTitle</item>
+
     </style>
 </resources>
