--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#1E1E1E</color>
+    <color name="black_2">#0C0C0C</color>
+    <color name="white">#FFFFFF</color>
+    <color name="white_2">#E6E6E6</color>
+    <color name="light_gray">#BDBDBD</color>
+    <color name="light_gray_2">#9A9A9A</color>
+    <color name="gray">#707070</color>
+    <color name="green">#56ED34</color>
+    <color name="green_2">#38C518</color>
+    <color name="red">#DF3434</color>
+    <color name="red_2">#DF1818</color>
+    <color name="dark_red">#B10F0F</color>
+    <color name="dark_purple">#361B5C</color>
+    <color name="dark_purple_2">#281445</color>
+    <color name="purple">#673AB7</color>
+    <color name="purple_2">#50279A</color>
+    <color name="light_purple">#905DEC</color>
+    <color name="light_purple_2">#7E5AC1</color>
+    <color name="white_purple">#C6A9FD</color>
 </resources>
