--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--cores customizadas -->
+    
+    <color name="custom_primary">#643AE7</color>
+    <color name="custom_secundary">#FF8F00</color>
+    
+
 </resources>
