adicionado a tela de SplashScreen

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -29,6 +29,6 @@
         </item>
 
         <item name="titleStyle">@style/Base.TextAppearance.AppCompat.BasicTitle</item>
-
+        <item name="secondaryTitleStyle">@style/Base.TextAppearance.AppCompat.SecondaryTitle</item>
     </style>
 </resources>
