--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,8 @@
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
+    <style name="splashScreenStyle">
 
+    </style>
 
 </resources>
