--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -18,4 +18,13 @@
         <item name="android:textSize">30sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="Base.TextAppearance.AppCompat.SecondaryTitle">
+        <item name="android:textStyle">normal</item>
+        <item name="fontFamily">@font/manrope_semi_bold</item>
+        <item name="android:fontFamily">@font/manrope_semi_bold</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
