--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -38,7 +38,7 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <EditText
-            android:id="@+id/tvEmailLogin2"
+            android:id="@+id/tvEmailForgot"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
@@ -53,7 +53,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
         <Button
-            android:id="@+id/btLoginLogon2"
+            android:id="@+id/btForgotPassword"
             style="?secondaryButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
