--- a/app/src/main/res/layout/coluna.xml
+++ b/app/src/main/res/layout/coluna.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="200dp"
-    android:layout_centerInParent="true"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="45dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:checkable="true"
-    app:cardCornerRadius="5dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="6dp">
 
     <RelativeLayout
@@ -21,7 +14,7 @@
             android:id="@+id/imagem"
             android:layout_width="match_parent"
             android:layout_height="102dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            android:background="@color/red"/>
 
         <TextView
             android:id="@+id/titulo"
@@ -31,7 +24,7 @@
             android:layout_below="@id/imagem"
             android:layout_marginTop="0dp"
             android:text="Título do campeonato"
-            android:textSize="25sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/descricaoJogo"
@@ -41,7 +34,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="Título do campeonato"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/descricaoData"
@@ -53,7 +46,6 @@
             android:text="15/12/2021"
             android:textSize="10sp" />
     </RelativeLayout>
-
 
 
 </androidx.cardview.widget.CardView>
