--- a/app/src/main/res/layout/fragment_main_groups.xml
+++ b/app/src/main/res/layout/fragment_main_groups.xml
@@ -3,14 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C00295C"
+    android:background="@drawable/background_gradient"
     tools:context=".ui.fragment.main.groups.MainGroupsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00103E"
-        android:text="@string/hello_blank_fragment" />
+
 
 </FrameLayout>
